--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                 <ul class="burger-menu-list">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="gallery.html?collection=diner">LE DINER</a></li>
-                    <li><a href="gallery.html?collection=malvie">MALVIE MAGAZINE</a></li>
-                    <li><a href="gallery.html?collection=madeinFrance">MADE IN FRANCE</a></li>
                     <li><a href="gallery.html?collection=aura">::AURA::</a></li>
+                    <li><a href="gallery.html?collection=diner">LE DINER</a></li>
+                    <li><a href="gallery.html?collection=love">22 SHADES OF LOVE</a></li>
+                    <li><a href="gallery.html?collection=madeinFrance">MADE IN FRANCE</a></li>
+                    <li><a href="gallery.html?collection=malvie">ELEGANCE IN CONTRAST</a></li>
+                    <li><a href="gallery.html?collection=rugby">RUGBY</a></li>
                 </ul>
             </nav>
         </div>
@@ -90,18 +92,26 @@
             </section> -->
 
             <!-- LE DINER Section -->
+            <section class="aura-section" onclick="window.location.href='gallery.html?collection=aura'" style="cursor: pointer;">
+                <h2>SILVER GARDEN</h2>
+            </section>
             <section class="diner-section" onclick="window.location.href='gallery.html?collection=diner'" style="cursor: pointer;">
                 <h2>LE DINER</h2>
             </section>
-            <section class="malvie-section" onclick="window.location.href='gallery.html?collection=malvie'" style="cursor: pointer;">
-                <h2>MALVIE MAGAZINE</h2>
+            <section class="love-section" onclick="window.location.href='gallery.html?collection=love'" style="cursor: pointer;">
+                <h2>22 SHADES OF LOVE</h2>
             </section>
             <section class="madeinFrance-section" onclick="window.location.href='gallery.html?collection=madeinFrance'" style="cursor: pointer;">
                 <h2>MADE IN FRANCE</h2>
             </section>
-            <section class="aura-section" onclick="window.location.href='gallery.html?collection=aura'" style="cursor: pointer;">
-                <h2>::AURA::</h2>
+
+            <section class="malvie-section" onclick="window.location.href='gallery.html?collection=malvie'" style="cursor: pointer;">
+                <h2>ELEGANCE IN CONTRAST</h2>
             </section>
+            <section class="rugby-section" onclick="window.location.href='gallery.html?collection=rugby'" style="cursor: pointer;">
+                <h2>RUGBY</h2>
+            </section>
+            
 
 
             <!-- Quote Section -->
