--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <ul class="burger-menu-list">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="gallery.html?collection=aura">::AURA::</a></li>
                     <li><a href="gallery.html?collection=diner">LE DINER</a></li>
                     <li><a href="gallery.html?collection=love">22 SHADES OF LOVE</a></li>
@@ -42,7 +43,7 @@
             <!-- Title Section -->
             <section class="title-section">
                 <h2 class="main-title">AURA VIOLET</h2>
-                <h4 class="main-subtitle">Fashion Stylist – Art Director – Brand Consultant</h4>
+                <h4 class="main-subtitle">Fashion Stylist – Art Director</h4>
                 <!-- <div class="intro-text">
                     <p>The Paris-based house creates womenswear and menswear according to its uniquely unconventional principles inspired by Martin Margiela himself, a philosophy in which deconstruction and heritage go hand in hand to create designs that showcase fashion as an art of meaning rather than a cult of personality.</p>
                 </div> -->
@@ -115,22 +116,7 @@
 
 
             <!-- Quote Section -->
-            <section class="quote-section">
-                <div class="quote-content">
-                    <blockquote>
-                        <span class="quote-mark">"</span>
-                        <p>For me, he was the best. I argued a lot about this. His clothes were 'surgeons' robes, his skirts were huge, and his shoes were beautiful- with a strong, masculine top and a low massive heel.</p>
-                    </blockquote>
-                    <div class="quote-attribution">
-                        <p class="author-name">JENNY<br>MEIRENS</p>
-                        <div class="star-icon">✦</div>
-                    </div>
-                </div>
-                <!-- <div class="quote-images"> -->
-                    <!-- <div class="placeholder-image workshop-image"></div> -->
-                    <!-- <div class="placeholder-image fitting-image"></div> -->
-                <!-- </div> -->
-            </section>
+            
         </article>
     </div>
 
