--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a href="gallery.html?collection=diner">LE DINER</a></li>
                     <li><a href="gallery.html?collection=love">22 SHADES OF LOVE</a></li>
                     <li><a href="gallery.html?collection=madeinFrance">MADE IN FRANCE</a></li>
-                    <li><a href="gallery.html?collection=malvie">ELEGANCE IN CONTRAST</a></li>
+                    <li><a href="gallery.html?collection=malvie">MALVIE MAGAZINE</a></li>
                     <li><a href="gallery.html?collection=rugby">RUGBY</a></li>
                 </ul>
             </nav>
